# Element

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  Element.sln  LICENSE  NuGet.config  README.html  README.md
Documentation/: CMakeLists.txt  Doxyfile.in  Overview.rst  UserGuide.rst  conf.py  index.rst  requirements.txt
Documentation/_ext/: examplecode.py
Documentation/cmake/: FindSphinx.cmake
Documentation/element_dotnet/: index.rst
Documentation/scripts/: Documentation.html  move-docs.py  zip-docs.py
Documentation/static/: theme.css
LMNT/: CMakeLists.txt  README.md
LMNT/cmake/: DetectTargetArch.cmake  FetchCUnit.cmake  FetchDynASM.cmake
LMNT/doc/: Bytecode.md  ExecutionModel.md  Instructions.md  JIT.md
LMNT/include/: CMakeLists.txt
LMNT/include/lmnt/: archive.h  common.h  config.h  extcalls.h  interpreter.h  jit.h  jitconfig.h  opcodes.h  ops_bounds.h  ops_branch.h  ops_fncall.h  ops_math.h  ops_misc.h  ops_trig.h  ops_util.h  platform.h  validation.h
LMNT/include/lmnt/arm/: platform.h
LMNT/include/lmnt/x86_64/: memcpy_fast.h  platform.h
LMNT/src/: CMakeLists.txt  archive.c  dispatch_computed_goto.h  dispatch_jumptable.h  dispatch_switch.h  extcalls.c  helpers.h  interpreter.c  opcode_info.c  opcodes.c  ops_bounds.c  ops_bounds_impl.h  ops_branch.c  ops_branch_impl.h  ops_fncall.c  ops_fncall_impl.h  ops_math.c  ops_math_impl.h  ops_misc.c  ops_misc_impl.h  ops_trig.c  ops_trig_impl.h  ops_util.c  validation.c
LMNT/src/jit/: CMakeLists.txt  hosthelpers.h  jit-armv7m.dasc  jit-x86_64.dasc  jit.c  jithelpers.h  op_impls.h  reghelpers-arm-vfp.h  reghelpers-x86.h  targethelpers-arm.h  targethelpers-x86.h
LMNT/src/lmnt/: archive.c  helpers.h  interpreter.c  jit.c  opcodes.c  ops_branch.c  ops_fncall.c  ops_math.c  ops_misc.c  ops_trig.c  ops_util.c  validation.c
LMNT/src/lmnt/jit/: jit-armv7m.dasc  jit-x86_64.dasc  jithelpers.h  reghelpers-arm-vfp.h  reghelpers-x86.h  targethelpers-arm.h  targethelpers-x86.h
LMNT/test/: CMakeLists.txt  circle.h  circle_double.h  helpers.h  main.c  simple1000.h  simple125.h  simple250.h  test_archive.h  test_bounds.h  test_branch.h  test_fncall.h  test_interpreter.c  test_jit_native.c  test_maths.c  test_maths_scalar.c  test_maths_scalar.h  test_maths_vector.h  test_misc.h  test_trig.h  test_util.h  testhelpers.h  testsetup_interpreter.h  testsetup_jit_native.h
LMNT/testapp/: CMakeLists.txt  circle.h  circle_double.h  circle_ht.h  main.c  simple.h  simple1000.h  simple125.h  simple250.h  simple500.h
libelement/: .clang-format  CMakeLists.txt  notes.txt
libelement.CLI/: CMakeLists.txt  main.cpp
libelement.CLI/cmake/: FindRapidJSON.cmake
libelement.CLI/dependencies/: CMakeLists.txt
libelement.CLI/include/: base_command.hpp  command.hpp  compilation_input.hpp  compile_command.hpp  compiler_message.hpp  declaration_command.hpp  evaluate_command.hpp  message_codes.hpp  parse_command.hpp  typeof_command.hpp
libelement.CLI/src/: command.cpp  compiler_message.cpp  main.cpp  message_codes.cpp
libelement/cmake/: FindGcov.cmake  FindLcov.cmake
libelement/dependencies/: CMakeLists.txt
libelement/dependencies/memorypool/: MemoryPool.h  MemoryPool.tcc
libelement/include/element/: ast.h  common.h  element.h  interpreter.h  interpreter_object_model.h  lmnt.h  object.h  parser.h  token.h
libelement/scripts/: run-clang-format.py
libelement/src/: common.cpp  common_internal.cpp  common_internal.hpp  configuration.hpp.in  construct.cpp  construct.hpp  filesystem.hpp  interpreter.cpp  interpreter_internal.cpp  interpreter_internal.hpp  interpreter_object_model.cpp  log_errors.cpp  log_errors.hpp  object.cpp  source_information.hpp  stringutil.hpp  token.cpp  token_internal.cpp  token_internal.hpp  typeutil.hpp
libelement/src/ast/: ast.cpp  ast_indexes.hpp  ast_internal.cpp  ast_internal.hpp  functions.cpp  functions.hpp  fwd.hpp  parser.cpp  parser_internal.cpp  parser_internal.hpp  scope.cpp  scope.hpp  types.cpp  types.hpp
libelement/src/etree/: compiler.cpp  compiler.hpp  evaluator.cpp  evaluator.hpp  expressions.cpp  expressions.hpp  fwd.hpp  instructions.hpp
libelement/src/instruction_tree/: cache.hpp  evaluator.cpp  evaluator.hpp  fwd.hpp  instructions.cpp  instructions.hpp
libelement/src/lmnt/: compiler.cpp  compiler.hpp  compiler_state.cpp  compiler_state.hpp  exporter.cpp  naive_allocator.hpp
libelement/src/obj_model/: declarations.cpp  declarations.hpp  element_object.cpp  element_object.hpp  errors.cpp  errors.hpp  expression_list.hpp  expressions.cpp  expressions.hpp  functions.cpp  functions.hpp  fwd.hpp  identifier.hpp  intermediaries.cpp  intermediaries.hpp  intrinsics.cpp  intrinsics.hpp  literal.hpp  metainfo.cpp  object.cpp  object.hpp  object_model.cpp  object_model.hpp  port.cpp  port.hpp  port_list.hpp  scope.cpp  scope.hpp  type_annotation.cpp  type_annotation.hpp  type_name.hpp  types.cpp  types.hpp
libelement/src/obj_model/constraints/: constraint.cpp  constraint.hpp
libelement/src/obj_model/declarations/: custom_constraint_declaration.hpp  custom_function_declaration.hpp  custom_struct_declaration.hpp  declaration.cpp  declaration.hpp  intrinsic_constraint_declaration.hpp  intrinsic_function_declaration.hpp  intrinsic_struct_declaration.hpp  namespace_declaration.hpp
libelement/src/obj_model/expressions/: call_expression.hpp  expression.cpp  expression.hpp  indexing_expression.hpp  (+1 more)
libelement/src/object_model/: call_stack.cpp  call_stack.hpp  capture_stack.cpp  capture_stack.hpp  compilation_context.cpp  compilation_context.hpp  error.cpp  error.hpp  error_map.cpp  error_map.hpp  fwd.hpp  identifier.cpp  identifier.hpp  metainfo.cpp  object.cpp  object.hpp  object_internal.cpp  object_internal.hpp  object_model_builder.cpp  object_model_builder.hpp  port.cpp  port.hpp  scope.cpp  scope.hpp  scope_caches.cpp  scope_caches.hpp  type_annotation.cpp  type_annotation.hpp
libelement/test/: ast.test.cpp  ast_to_code.test.cpp  eval.test.cpp  lmnt_test.cpp  main.c  main.test.cpp  obj_model.test.cpp  test - Copy.ele  tokeniser.test.cpp  util.test.cpp  util.test.hpp
(+1000 files in other folders)
